# ai-scripts

./: .gitignore  README.md  chat.md  justfile  pyproject.toml
ai_scripts/: agent.py  ask_workspace.py  model.py
ai_scripts/lib/: agent.py  dict.py  env.py  fs.py  logging.py  model.py  sh.py  string.py  tokenizing.py
scripts/: ask-workspace.py
