[tool.poetry]
name = "ai_scripts"
description = "Scripts to interact with various AIs"
version = "0.1.0"
authors = ["Tobias Walle"]
readme = "README.md"
packages = [{ include = "ai_scripts" }]

[tool.poetry.scripts]
ask-workspace = "ai_scripts.bin.ask_workspace:main"

[tool.poetry.dependencies]
python = ">=3.11"
openai = "^1.6.1"
rich = "^13.7.0"
tiktoken = "^0.5.2"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
