[tool.poetry]
name = "ai_scripts"
description = "Scripts to interact with various AIs"
version = "0.1.0"
authors = ["Tobias Walle"]
readme = "README.md"
packages = [{ include = "ai_scripts" }]

[tool.poetry.scripts]
ask-workspace = "ai_scripts.bin.ask_workspace:main"
how = "ai_scripts.bin.how:main"
explain = "ai_scripts.bin.explain:main"
explain-code = "ai_scripts.bin.explain_code:main"
ai-chat = "ai_scripts.bin.ai_chat:main"
implement = "ai_scripts.bin.implement:main"
rewrite = "ai_scripts.bin.rewrite:main"
find-docs = "ai_scripts.bin.find_docs:main"
summarize = "ai_scripts.bin.summarize:main"
translate = "ai_scripts.bin.translate:main"
spellcheck = "ai_scripts.bin.spellcheck:main"

[tool.poetry.dependencies]
python = ">=3.11.7,<4.0"
openai = "^1.6.1"
rich = "^13.7.0"
tiktoken = "^0.5.2"
pyperclip = "^1.8.2"
mdformat = "^0.7.17"
mdformat-frontmatter = "^2.0.8"
pyyaml = "^6.0.1"
langchain = "^0.1.0"
bs4 = "^0.0.2"
langchain-anthropic = "^0.1.4"

[tool.pyright]
venvPath = "."
venv = ".venv"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
